--- a/WhereIsMyCoffee/WhereIsMyCoffee.csproj
+++ b/WhereIsMyCoffee/WhereIsMyCoffee.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\ResponseModels\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
